--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^11.0.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.1.6",
     "morgan": "~1.9.1",
     "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   }
 }
