--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
-  }
+  },
+  "engines": {"node" :"17.3.0"}
 }
