--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
-
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -18,9 +17,12 @@
     "http-errors": "~1.6.3",
     "mongoose": "^6.1.6",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   },
-  "engines": {"node" :"17.3.0"}
+  "engines": {
+    "node": "17.3.0"
+  }
 }
